Small refactoring and fix with metrics